--- a/Dairy_Care_System/templates/base.html
+++ b/Dairy_Care_System/templates/base.html
@@ -37,11 +37,11 @@
                 { regex: /\/cart\/delete\/(\d+)\//g, replace: '/cart/delete/DCS/' },
                 { regex: /\/cancelorder\/(\d+)\//g, replace: '/cancelorder/DCS/' },
                 { regex: /\/get_order_tracking\/(\d+)\//g, replace: '/get_order_tracking/DCS/' },
-                { regex: /\/generate_qr\/(\d+)\//g, replace: '/generate_qr/DCS/' },
-                { regex: /\/verify_qr\/(\d+)\//g, replace: '/verify_qr/DCS/' },
+                // { regex: /\/generate_qr\/(\d+)\//g, replace: '/generate_qr/DCS/' },
+                // { regex: /\/verify_qr\/(\d+)\//g, replace: '/verify_qr/DCS/' },
                 { regex: /\/confirm-delivery\/(\d+)\//g, replace: '/confirm-delivery/DCS/' },
                 { regex: /\/get_delivery_status\/(\d+)\//g, replace: '/get_delivery_status/DCS/' },
-                { regex: /\/scan-qr\/\?(\d+)/g, replace: '/scan-qr/DCS/' },
+                // { regex: /\/scan-qr\/\?(\d+)/g, replace: '/scan-qr/DCS/' },
                 { regex: /\/animal\/(\d+)\/animalhealthstatus/g, replace: '/animal/DCS/animalhealthstatus' },
             ];
 
@@ -83,11 +83,11 @@
                 '/cart/delete/DCS/',
                 '/cancelorder/DCS/',
                 '/get_order_tracking/DCS/',
-                '/generate_qr/DCS/',
-                '/verify_qr/DCS/',
+                // '/generate_qr/DCS/',
+                // '/verify_qr/DCS/',
                 '/confirm-delivery/DCS/',
                 '/get_delivery_status/DCS/',
-                '/scan-qr/DCS/',
+                // '/scan-qr/DCS/',
             ];
 
             const currentPath = window.location.pathname;
@@ -115,12 +115,12 @@
         });
 
         // Only mask the URL, don't change any functionality
-        document.addEventListener('DOMContentLoaded', function() {
-            let url = window.location.href;
-            if (url.includes('/scan-qr/') && /\/scan-qr\/\d+/.test(url)) {
-                history.replaceState(null, '', '/scan-qr/DCS/');
-            }
-        });
+        // document.addEventListener('DOMContentLoaded', function() {
+        //     let url = window.location.href;
+        //     if (url.includes('/scan-qr/') && /\/scan-qr\/\d+/.test(url)) {
+        //         history.replaceState(null, '', '/scan-qr/DCS/');
+        //     }
+        // });
 
         document.addEventListener('DOMContentLoaded', function() {
             let url = window.location.href;
