--- a/Dairy_Care_System/templates/deliveryboyassigns.html
+++ b/Dairy_Care_System/templates/deliveryboyassigns.html
@@ -426,8 +426,8 @@
     <div id="mySidenav" class="sidenav"><br><br><br><br>
         <a href="{% url 'deliveryboyassigns' %}"><i class="fas fa-truck"></i> Your Deliveries</a><br>
         <a href="{% url 'deliverydetailsall' %}"><i class="fas fa-shopping-basket"></i> Delivery History</a><br>
-        <a href="{% url 'deliverynotifications' %}"><i class="fas fa-bell"></i>  Notifications</a><br>
-        <a href="#"><i class="fas fa-comments"></i> Feedback Review</a><br>
+        <!-- <a href="{% url 'deliverynotifications' %}"><i class="fas fa-bell"></i>  Notifications</a><br>
+        <a href="#"><i class="fas fa-comments"></i> Feedback Review</a><br> -->
         <a href="{% url 'employeepage' %}"><i class="fas fa-home home-icon"></i> Home</a><br>
     </div>
 
