--- a/Dairy_Care_System/templates/productdetails.html
+++ b/Dairy_Care_System/templates/productdetails.html
@@ -447,14 +447,14 @@
                         </form>
                     </div>
 
-                    <div class="product-actions">
+                    <!-- <div class="product-actions">
                         <form method="GET" action="{% url 'preorder' %}">
                             {% csrf_token %}
                             <input type="hidden" name="product_id" value="{{ product.product_id }}">
                             <button class="btn items-button" type="submit">
                                 <i class="fas fa-clock"></i> What can i make?</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Display success message if it exists -->
