--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -303,7 +303,8 @@
         <a href="{% url 'orderdetails' %}"><i class="fas fa-shopping-bag"></i>  Order Details</a><br>
         <a href="{% url 'preorderfarm' %}"><i class="fas fa-clipboard-list"></i>  Pre-Order Details</a><br>
         <!-- <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br> -->
-        <a href="{% url 'milkqualityanalysis' %}"><i class="fas fa-microscope"></i> Quality Analysis</a><br>
+        <a href="{% url 'milkqualityanalysis' %}" id="milkquality"><i class="fas fa-microscope"></i> Quality Analysis</a><br>
+        <a href="{% url 'demandmarketprice' %}" id="marketprice"><i class="fas fa-chart-line"></i> Market Price Analysis</a><br>
         <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i>  Stock Details</a><br>
         <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications
             <!--  class="notification-badge" <span class="badge" id="notification-count">{{ unread_count }}</span>  -->
