--- a/Dairy_Care_System/templates/registration.html
+++ b/Dairy_Care_System/templates/registration.html
@@ -43,9 +43,9 @@
                 <i class="fas fa-home home-icon"></i>
             </a>
         </div>
-        <div class="nav-item">
+        <!-- <div class="nav-item">
             <b><a href="{% url 'productexplore' %}"><i class="fas fa-tags"></i> Explore</a></b>
-        </div>
+        </div> -->
         <!-- Add other nav items here -->
     </div>
 
